--- a/vue-sell-cube/package.json
+++ b/vue-sell-cube/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.15.0",
     "cube-ui": "~1.12.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2"
